# auth-casbin-rs

./: .env.example  .gitignore  Cargo.toml  bleur.toml  default.nix  flake.nix  shell.nix
.sqlx/: query-058028c5b3046d859e24c3983a6ed8421506413dcabfbf1b2e96b3a40d4b6f5b.json  query-1e51b486897f4472a866f9989a1742ca3223b764b4306b025f2d5701b569594e.json  query-4a1d1937ed01f26d73ea8a9f24efc885a22d0298e4af50c4f5e36f63550159a5.json  query-54bf229521f34151cda44866062b20db0ac649ec4dcfe5d565170d5f3c87b9d0.json  query-58327aa90726e98d2f31a5178c611b22b3177ea71f812c9f53e4164f22cd1f8a.json  query-80842690346acfca48172aac92d94d43ac553c4f864bc7b57842095abd63f5fc.json  query-856893a242b9f47a0181bd91935f90754932f27a1d3e923735e769c386ed4176.json  query-ab89766a779c7fdc6d1d41b19554839c1c96fea4bf68bd46d814651fe9f29134.json  query-b6e755ba0d6797033f74f13e447e2d3587907ac3bb7a5482fa7cbda940176822.json  query-bd9ac1bee3419e3c66b0bc88b6f0ebe61546608c1dc376dd127df77ec6d7a7dd.json  query-cc59347187113d268476288a1f39c20b98d612dff403d123312b58b35f97c612.json  query-e7b2387ca961380501017cf520bbf7fe4b6e8dd4bb178c99dc01a34a8c472221.json
migrations/: 20260623101711_notes.down.sql  20260623101711_notes.up.sql  20260623132943_add_roles.down.sql  20260623132943_add_roles.up.sql  20260626060749_casbin.down.sql  20260626060749_casbin.up.sql
src/: config.rs  lib.rs  main.rs
src/db/: notes.rs  users.rs
src/entities/: auth.rs  mod.rs  notes.rs  repository.rs  users.rs
src/rediscn/: mod.rs  redis_adaptor.rs
src/routes/: auth.rs  casbin.rs  mod.rs  notes.rs  users.rs
